Completed dropdown section

--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
                 </div>
                 <!-- dropdown box -->
             <div class="form-group row">
-                
+                <div class="col-sm-11">
+                <label for="dropdown" class="col-form-label col-form-label-sm">What type of content is most valuable to you?</label>
+                    <select class="form-control form-control-sm" id="dropdown">
+                        <option selected>Select One</option>
+                        <option>Blog posts</option>
+                        <option>Videos</option>
+                        <option>Written tutorials</option>
+                    </select>
+                    <!-- col-sm-11 closing tag for dropdown selections-->
+                          </div>   
             <!-- dropdown Form-group-row closing tag-->
             </div>
             
