Completed text area and submit buttons

--- a/index.html
+++ b/index.html
@@ -110,29 +110,39 @@
             <!-- Closing for ID="radios" <div> -->
             </div>
 
+<!-- Text area/comments -->
+<div class="form-group form-control-md col-sm-11">
+        <label for="comments">Any additional comments or suggestions?</label>
+        <textarea class="form-control" id="comments" rows="4"></textarea>
+<!-- Closing tag for the Textarea form group-->
+    </div>
+
+
+<!-- Submit/Reset Buttons -->
+<div class="form-group form-control-md">
+    <input class="btn btn-primary btn-sm" type="submit" id="submit" value="Submit">
+    <input class="btn btn-primary btn-sm" type="reset" id="reset" value="Reset">
+    <small id="thankyou" class="form-text">
+        Thank you very much for your time.
+      </small>
+<!-- End of Buttons form group -->
+</div>
 
 
 
-
-                <!-- end of form -->   
-                </form>
-                <!-- end of Container -->
-                </div>
-
-
-
-
-
-
-
-
+<!-- end of form -->   
+</form>
+ <!-- end of Container -->
+  </div>
 
 
 <!-- FreeCodeCamp CDN -->
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-<!-- Boostrap scripts -->
+
+<!-- Bootstrap scripts -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 </html>
